# platform

./: .clang-format  .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  common.mk  flake.nix  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  t.go
ak-agent/: Cargo.toml  Makefile  build.rs
ak-agent-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ak-agent-desktop/src-tauri/capabilities/: default.json
ak-agent-desktop/src-tauri/icons/: icon.icns
ak-agent-desktop/src-tauri/src/: cmd.rs  lib.rs  main.rs
ak-agent/src/: agent.rs  lib.rs  main.rs
ak-agent/src/config/: mod.rs
ak-agent/src/grpc/: agent_auth.rs  agent_cache.rs  agent_ctrl.rs  mod.rs  ping.rs
ak-agent/src/ssh/: agent.rs  ext_ak.rs  ext_session_bind.rs  mod.rs  txn.rs  txn_keys.rs
ak-agent/src/token/: global.rs  mod.rs  profile.rs
ak-browser-support/: Cargo.toml  Makefile
ak-browser-support/src/: handle_get_token.rs  handle_list_profiles.rs  handle_ping.rs  handle_platform_sign_endpoint_header.rs  main.rs  models.rs  path_handler.rs
ak-cli/: Cargo.toml  Makefile  build.rs
ak-cli/src/: api.rs  cache.rs  format.rs  lib.rs  main.rs
ak-cli/src/auth/: aws.rs  k8s.rs  mod.rs  raw.rs
ak-cli/src/commands/: auth.rs  completions.rs  config.rs  mod.rs  version.rs  whoami.rs
ak-cli/src/setup/: ak.rs  mod.rs
ak-cli/tests/: smoke.rs
ak-ffi/: Cargo.toml
ak-ffi/src/: ffi.rs  lib.rs
ak-flow-executor/: Cargo.toml
ak-flow-executor/src/: builder.rs  executor.rs  lib.rs  solvers.rs
ak-flow-executor/tests/: real.rs
ak-macos-touchid/: Cargo.toml  build.rs
ak-macos-touchid/examples/: touchid.rs
ak-macos-touchid/src/: lib.rs
ak-macos-touchid/swift-library/: .gitignore  Package.swift
ak-nss/: Cargo.toml  Makefile
ak-nss/src/: backend.rs  group.rs  lib.rs  mapping.rs  passwd.rs  shadow.rs
ak-pam/: Cargo.toml  Makefile
ak-pam/src/: auth.rs  dir.rs  lib.rs  logger.rs  pam_env.rs  session.rs
ak-pam/src/auth/: authorize.rs  fido.rs  interactive.rs
ak-platform/: Cargo.toml  Makefile
ak-platform-authz/: Cargo.toml
ak-platform-authz/examples/: authz_prompt.rs
ak-platform-authz/src/: lib.rs  linux.rs  macos.rs  windows.rs
ak-platform-authz/src/sys/: linux.rs  macos.rs  mod.rs  windows.rs
ak-platform-e2e/: Cargo.toml
ak-platform-e2e/src/: lib.rs  test_machine.rs
ak-platform-e2e/tests/: agent.rs  auth.rs  directory.rs  login.rs  pkg.rs
ak-platform-facts/: Cargo.toml  Makefile
ak-platform-facts/examples/: facts_print.rs
ak-platform-facts/src/: disk.rs  group.rs  hardware.rs  lib.rs  network.rs  os.rs  process.rs  query.rs  user.rs  util.rs
ak-platform-facts/src/disk/: linux.rs  macos.rs  mod.rs  other.rs  windows.rs
ak-platform-facts/src/group/: linux.rs  macos.rs  mod.rs  other.rs  windows.rs
ak-platform-facts/src/hardware/: linux.rs  macos.rs  mod.rs  other.rs  windows.rs
ak-platform-facts/src/network/: linux.rs  macos.rs  mod.rs  other.rs  windows.rs
ak-platform-facts/src/os/: linux.rs  macos.rs  mod.rs  other.rs  windows.rs
ak-platform-facts/src/process/: mod.rs
ak-platform-facts/src/user/: linux.rs  macos.rs  mod.rs  other.rs  windows.rs
ak-platform-facts/tests/: facts_parity.rs
ak-platform-keyring/: Cargo.toml
ak-platform-keyring/src/: cache.rs  lib.rs  macos.rs
ak-platform/examples/: authz_prompt.rs  log.rs
ak-platform/src/: config.rs  grpc.rs  lib.rs  paths.rs  prelude.rs  string.rs
ak-platform/src/authz/: linux.rs  macos.rs  mod.rs  windows.rs
ak-platform/src/client/: mod.rs  sysd.rs  user.rs
ak-platform/src/grpc/: method_caller.rs  mod.rs  ssh.rs
ak-platform/src/keyring/: macos.rs  mod.rs
ak-platform/src/log/: linux.rs  macos.rs  mod.rs  unix.rs  windows.rs
ak-platform/src/net/: mod.rs  unix.rs  windows.rs
ak-platform/src/platform/: mod.rs  paths.rs
ak-platform/src/storage/: cache.rs  mod.rs
akp-logger/: Cargo.toml
akp-logger/examples/: log.rs
akp-logger/src/: lib.rs  linux.rs  windows.rs
ee/wcp/: .gitignore  CMakeLists.txt  Makefile  README.md  build.ps1
ee/wcp-rs/: Cargo.toml
ee/wcp-rs/auth-app/: Cargo.toml  tauri.conf.json
ee/wcp-rs/src/: auth.rs  helpers.rs  lib.rs  utils.rs
ee/wcp-rs/tester/: Cargo.toml
ee/wcp/.utils/: addsetup.py
ee/wcp/AuthentikWindowsCredentialProvider/: CMakeLists.txt  README.md
ee/wcp/Setup/: Setup.vdproj
ee/wcp/_gen/: agent.grpc.pb.cc  agent.grpc.pb.h  agent.pb.cc  agent.pb.h  agent_auth.grpc.pb.cc  agent_auth.grpc.pb.h  agent_auth.pb.cc  agent_auth.pb.h  agent_cache.grpc.pb.cc  agent_cache.grpc.pb.h  agent_cache.pb.cc  agent_cache.pb.h  agent_config.grpc.pb.cc  agent_config.grpc.pb.h  agent_config.pb.cc  agent_config.pb.h  agent_platform.grpc.pb.cc  agent_platform.grpc.pb.h  agent_platform.pb.cc  agent_platform.pb.h  nss.grpc.pb.cc  nss.grpc.pb.h  nss.pb.cc  nss.pb.h  pam.grpc.pb.cc  pam.grpc.pb.h  pam.pb.cc  pam.pb.h  pam_session.grpc.pb.cc  pam_session.grpc.pb.h  pam_session.pb.cc  pam_session.pb.h  pam_token.grpc.pb.cc  pam_token.grpc.pb.h  pam_token.pb.cc  pam_token.pb.h
ee/wcp/ak_common/: CMakeLists.txt  ak_log.cpp  ak_sentry.cpp  ak_sysd_config.cpp  crypt.cc  strings.cpp
ee/wcp/ak_cred_provider/: CMakeLists.txt  ClassFactory.cpp  Credential.cpp  Debug.cpp  Dll.cpp  GUIDs.cpp  Helpers.cpp  Provider.cpp  ak_config.cpp  ak_cred_provider.def  ak_log.cpp  ak_sentry.cpp
ee/wcp/ak_lsa/: CMakeLists.txt  Debug.cpp  Dll.cpp  DllMain.cpp  Lsa.cpp  (+11 more)
nss/: Cargo.toml  Makefile  nfpm.yaml
nss/_deb/: postinst.sh
nss/_rpm/: post.sh
nss/debian/: postinst
nss/src/: generated.rs  group.rs  lib.rs  logger.rs  passwd.rs  shadow.rs
pam/: Cargo.toml  Makefile  README.md  config.yaml  nfpm.yaml  pam_config
pam/_deb/: pam_config  postinst.sh  prerm.sh
pam/_rpm/: post.sh  preun.sh
pam/debian/: postinst  postinst.sh  prerm  prerm.sh
pam/src/: auth.rs  config.rs  generated.rs  lib.rs  logger.rs  pam_env.rs  session.rs  session_data.rs  session_data_tests.rs  token.rs
utils_rs/: Cargo.toml  Makefile
utils_rs/examples/: grpc.rs  log.rs
utils_rs/src/: config.rs  ffi.rs  generated.rs  lib.rs  logger.rs
(+1464 files in other folders)
