[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"

[workspace]
resolver = "3"
members = ["ak-nss", "ak-pam", "ak-browser-support", "ak-platform", "ak-cli", "ak-ffi", "ak-platform-authz"]

[workspace.package]
version = "0.44.3"
edition = "2024"
license = "MIT"

[workspace.dependencies]
log = "0.4.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
tonic = { version = "0.14" }
tonic-prost = { version = "0.14" }
tower = { version = "0.5.3", features = ["util"] }
hyper-util = "0.1.20"
whoami = "2.1.0"
pbjson = "0.9.0"
pbjson-types = "0.9.0"
chrono = { version = "0.4.45", features = ["serde"] }
url = "2.5.8"
