[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"

[workspace]
resolver = "3"
members = [
    "ak-agent",
    "ak-browser-support",
    "ak-cli",
    "ak-ffi",
    "ak-meta",
    "ak-nss",
    "ak-pam",
    "ak-platform-authz",
    "ak-platform-keyring",
    "ak-platform",
]

[workspace.package]
version = "0.44.3"
edition = "2024"
license = "MIT"

[workspace.dependencies]
log = { version = "0.4.32", features = ["kv"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync"] }
tonic = { version = "0.14" }
tonic-prost = { version = "0.14" }
tower = { version = "0.5.3", features = ["util"] }
hyper-util = "0.1.20"
whoami = "2.1.0"
pbjson = "0.9.0"
pbjson-types = "0.9.0"
chrono = { version = "0.4.45", features = ["serde"] }
url = "2.5.8"
tracing = "0.1.44"
ssh-agent-lib = "0.6.0"
sentry = { version = "0.48.2", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "reqwest", "rustls"] }
authentik-client = { version = "2026.5.3", default-features = false, features = ["rustls"] }
uuid = { version = "1.23.3", features = ["v4"] }
