[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"

[workspace]
resolver = "3"
members = [
    "ak-agent",
    "ak-agent-desktop/src-tauri",
    "ak-api-cli-gen",
    "ak-browser-support",
    "ak-cli",
    "ak-ffi",
    "ak-flow-executor",
    "ak-meta",
    "ak-meta-macros",
    "ak-nss",
    "ak-pam",
    "ak-platform-authz",
    "ak-platform-e2e",
    "ak-platform-keyring",
    "ak-platform",
]

[workspace.package]
version = "0.50.2"
edition = "2024"
license = "MIT"

[workspace.dependencies]
ak-api-cli-gen = { path = "ak-api-cli-gen" }
authentik-client = { version = "2026.5.3", default-features = false, features = ["rustls"] }
chrono = { version = "0.4.45", features = ["serde"] }
color-eyre = "= 0.6.5"
eyre = "= 0.6.12"
hyper-util = "0.1.20"
log = { version = "0.4.32", features = ["kv"] }
pbjson = "0.9.0"
pbjson-types = "0.9.0"
sentry = { version = "0.48.2", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "reqwest", "rustls", "tower", "tracing"] }
sentry_eyre = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ssh-agent-lib = "0.6.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync"] }
tonic = { version = "0.14" }
tonic-prost = { version = "0.14" }
tower = { version = "0.5.3", features = ["util"] }
tracing = { version = "0.1.44", features = ["log-always"] }
url = "2.5.8"
uuid = { version = "1.23.3", features = ["v4"] }
whoami = "2.1.0"
oauth-device-flows = "0.1.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "cookies"] }
tracing-subscriber = "0.3"
