[package]
name = "ak-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "ak-agent"
path = "src/main.rs"

[dependencies]
ak-platform = { path = "../ak-platform" }
ak-platform-authz = { path = "../ak-platform-authz" }
tokio = { workspace = true }
tonic = { workspace = true }
waitgroup = "0.1.2"
log = { workspace = true }
tower-http = { version = "0.6.11", features = ["trace"] }
tracing = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
pbjson-types = { workspace = true }
ssh-agent-lib = { workspace = true }
