[package]
name = "ak-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "ak-agent"
path = "src/main.rs"

[dependencies]
ak-platform = { path = "../ak-platform" }
ak-platform-authz = { path = "../ak-platform-authz" }
authentik-client = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
waitgroup = "0.1.2"
log = { workspace = true }
tower-http = { version = "0.6.11", features = ["trace"] }
tracing = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
pbjson-types = { workspace = true }
ssh-agent-lib = { workspace = true }
reqwest = { version = "0.13.4", features = ["json"] }
jsonwebtoken = "9"
url = { workspace = true }
sentry = { workspace = true }
sentry-tower = { version = "0.48.2", features = ["http"] }
serde_with = "3.21.0"
