[package]
name = "ak-browser-support"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
akp-logger = { path = "../akp-logger" }
tonic = { workspace = true }
log = { workspace = true }
authentik_sys = { path = ".." }
native_messaging = { version = "0.2.0", features = ["tokio"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
] }
tower = { workspace = true }

# Needed because the native-messaging crate always requires this on windows
[target.'cfg(windows)'.dependencies]
winreg = { version = "0.52", optional = true }

[dev-dependencies]
hyper-util = { version = "0.1", features = ["tokio"] }
