[package]
name = "ak-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "ak"
path = "src/main.rs"

[dependencies]
ak-platform = { path = "../ak-platform" }
ak-meta = { path = "../ak-meta" }
aws-sdk-sts = { version = "1.106.0", features = ["behavior-version-latest"] }
aws-types = "1.3.16"
chrono = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4"
tracing = { workspace = true }
oauth-device-flows = { workspace = true }
open = "5.3.5"
pbjson-types = { workspace = true }
ratatui = "0.30.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
eyre.workspace = true
color-eyre.workspace = true
authentik-client.workspace = true
uuid.workspace = true

[build-dependencies]
ak-api-cli-gen.workspace = true
eyre.workspace = true
cargo_metadata = "0.23"
