[package]
name = "ak_ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "lib"]

[lints]
workspace = true

[dependencies]
ak-platform = { path = "../ak-platform" }
eyre = { workspace = true }
cxx = "1.0.194"
url = { workspace = true }
serde = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.56", features = ["serialization-serde"] }
