[package]
name = "ak-platform-authz"
version.workspace = true
edition.workspace = true
license.workspace = true

[[example]]
name = "authz_prompt"

[dependencies]
ak-platform = { path = "../ak-platform" }
tokio = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
ak-macos-touchid = { path = "../ak-macos-touchid" }
plist = "1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Security_Credentials_UI"
] }
