[package]
name = "ak-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints.clippy]
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"

[dependencies]
authentik-client.workspace = true
ak-platform = { path = "../ak-platform" }
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["time"] }
uuid.workspace = true
oauth-device-flows = { workspace = true }
reqwest = { workspace =true}
testcontainers = "0.27"
tracing = { workspace = true }
url.workspace = true
