[package]
name = "ak-platform-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints.clippy]
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"

[dependencies]
ak-flow-executor = { path = "../ak-flow-executor" }
ak-platform = { path = "../ak-platform" }
authentik-client.workspace = true
eyre.workspace = true
oauth-device-flows = { workspace = true }
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
testcontainers = "0.27"
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
url.workspace = true
uuid.workspace = true
