[package]
name = "ak-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[[example]]
name = "log"

[[example]]
name = "grpc_client"

[[example]]
name = "authz_prompt"

[dependencies]
base64 = "0.22.1"
hyper-util = { workspace = true }
log = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
prost = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tower = { workspace = true }
dirs-next = "2.0.0"
ssh-agent-lib = "0.6.0"
http = "1.4.2"
bytes = "1.11.1"
http-body-util = "0.1.3"
http-body = "1.0.1"
simplelog = "0.12.2"
tokio-stream = "0.1.18"
keyring = "4.0.1"
keyring-core = "1.0.0"
interprocess = { version = "2", features = ["tokio"] }

[target.'cfg(target_os = "macos")'.dependencies]
oslog = "0.2.0"
apple-native-keyring-store = "1.0.0"
apple-localauthentication = { version = "0.3.5", features = ["async"] }

[target.'cfg(unix)'.dependencies]
syslog = "7.0.0"
libc = "0.2.186"

[target.'cfg(target_os = "linux")'.dependencies]
polkit-rs = "0.3.0"

[target.'cfg(windows)'.dependencies]
eventlog = "0.4.0"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "io-util"] }
