[package]
name = "ak-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[[example]]
name = "log"

[[example]]
name = "grpc_client"

[dependencies]
base64 = "0.22.1"
hyper-util = { workspace = true }
log = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
prost = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tower = { workspace = true }
dirs-next = "2.0.0"
eyre = { workspace = true }
ssh-agent-lib = { workspace = true }
http = "1.4.2"
bytes = "1.11.1"
http-body-util = "0.1.3"
http-body = "1.0.1"
simplelog = "0.12.2"
tokio-stream = "0.1.18"
interprocess = { version = "2", features = ["tokio"] }
chrono = { workspace = true }
notify = "8.2.0"
sysinfo = { version = "0.39.3", default-features = false, features = ["system"] }
tracing = { workspace = true }
env_filter = "2.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
oslog = "0.2.0"

[target.'cfg(unix)'.dependencies]
syslog = "7.0.0"
libc = "0.2.186"

[target.'cfg(windows)'.dependencies]
eventlog = "0.4.0"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "io-util"] }
tempfile = "3"
