[package]
name = "akp-logger"
version.workspace = true
edition.workspace = true
license.workspace = true

[[example]]
name = "log"

[dependencies]
log = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
oslog = "0.2.0"

[target.'cfg(unix)'.dependencies]
syslog = "7.0.0"

[target.'cfg(windows)'.dependencies]
eventlog = "0.4.0"
