[package]
name = "authentik_nss"
version = "0.35.6"
edition = "2024"
license = "MIT"

[lib]
name = "authentik_nss"
crate-type = ["cdylib"]

[lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"

[dependencies]
authentik_sys = { path = ".." }
ctor = "0.6.3"
libc = "0.2.179"
libnss = "0.9.0"
log = "0.4.29"
