[package]
name = "authentik_nss"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "authentik_nss"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
authentik_sys = { path = ".." }
akp-logger = { path = "../akp-logger/" }
ctor = "1.0.7"
dtor = "1.0.5"
libc = "0.2.186"
libnss = "0.9.0"
log = { workspace = true }
