[package]
name = "authentik_pam"
version = "0.43.0"
edition = "2024"
license = "MIT"

[lib]
name = "authentik_pam"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
authentik_sys = { path = ".." }
ctap-hid-fido2 = "3.5.10"
ctor = "1.0.6"
dtor = "1.0.3"
gethostname = "1.1.0"
hex = "0.4.3"
libc = "0.2.186"
log = "0.4.29"
pam-bindings = "0.1.2"
serde = "1.0.228"
serde_json = "1.0.150"
whoami = "2.1.0"
