[package]
name = "authentik_pam"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "authentik_pam"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
authentik_sys = { path = ".." }
ctap-hid-fido2 = "3.5.11"
ctor = "1.0.7"
dtor = "1.0.5"
gethostname = "1.1.0"
hex = "0.4.3"
libc = "0.2.186"
log = "0.4.31"
pam-bindings = "0.2.1"
serde = "1.0.228"
serde_json = "1.0.150"
whoami = "2.1.0"
