[package]
name = "authentik_pam"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "authentik_pam"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
authentik_sys = { path = ".." }
akp-logger = { path = "../akp-logger/" }
ctap-hid-fido2 = "3.5.11"
ctor = "1.0.7"
dtor = "1.0.5"
gethostname = "1.1.0"
libc = "0.2.186"
log = { workspace = true }
pam-bindings = "0.3.0"
serde = { workspace = true }
serde_json = { workspace = true }
whoami = { workspace = true }
