[package]
name = "authentik_sys"
version = "0.1.0"
edition = "2024"

[dependencies]
syslog = "7.0.0"
libc = "0.2.177"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
prost = "0.12"
prost-types = "0.12"
tokio = "1.48.0"
tonic = "0.11"
tower = { version = "0.5.2", features = ["util" ]}
serde_json = "1.0.145"
sentry = "0.45.0"
