[package]
name = "authentik_sys"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]

[[example]]
name = "grpc"

[[example]]
name = "log"

[dependencies]
libc = "0.2.177"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
prost = "0.14.1"
prost-types = "0.14.1"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tonic = "0.14.2"
tower = { version = "0.5.2", features = ["util" ]}
serde_json = "1.0.145"
sentry = "0.45.0"
cxx = "1.0.188"
windows-sys = "0.61.2"

[target.'cfg(windows)'.dependencies]
eventlog = "0.3.0"

[target.'cfg(unix)'.dependencies]
syslog = "7.0.0"
