[package]
name = "ak-windows"
version = "0.1.0"
edition = "2024"

[lib]
name = "ak_cred_provider"
crate-type = ["cdylib"]

[dependencies]
ak_ffi = { path = "../../ak-ffi" }
ak-platform = { path = "../../ak-platform" }
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_Security_Credentials",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Cryptography",
    "Win32_NetworkManagement_NetManagement",
    "Win32_System_SystemInformation",
] }
windows-core = "0.61.2"
log = { workspace = true }
